--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ primary_navigation:
   - name: Priority Areas
     children:
       - name: Navigation link
-        url: "#main-content"
+        url: "/priority-first/"
       - name: Navigation link
         url: "#main-content"
       - name: Navigation link
@@ -141,6 +141,9 @@ searchgov:
 
 collections:
   pages:
+    output: true
+    permalink: /:path/
+  priority:
     output: true
     permalink: /:path/
 
